--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "expo-web-browser": "~12.8.2"
+    "expo-web-browser": "~12.8.2",
+    "typescript": "^5.3.0",
+    "@types/react": "~18.2.45"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
