--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^0.20.12",
+    "@react-navigation/native": "^6.1.17",
+    "@types/react": "~18.2.45",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
+    "expo-web-browser": "~12.8.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "expo-web-browser": "~12.8.2",
     "typescript": "^5.3.0",
-    "@types/react": "~18.2.45"
+    "react-native-screens": "~3.29.0",
+    "react-native-safe-area-context": "4.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
