--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
     "expo-web-browser": "~12.8.2",
+    "firebase": "^10.10.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.6",
